<resources>
    <string name="app_name">Moviet</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="add">Add</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name_hint">input term name</string>
    <string name="name">Name</string>
    <string name="genre">Description</string>
    <string name="release_date">Concept</string>
    <string name="genre_hint">input genre</string>
    <string name="date_hint">programming, design, theory</string>

    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
</resources>