<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@android:drawable/sym_action_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:hint="@string/name_hint"
        app:hintEnabled="true"
        app:hintTextColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_name"
        app:layout_constraintTop_toTopOf="@+id/text_view_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/text_view_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/genre"
        android:layout_marginTop="16dp"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="@+id/text_view_name"
        app:layout_constraintTop_toBottomOf="@+id/text_view_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:hint="@string/genre_hint"
        app:hintEnabled="true"
        app:hintTextColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_genre"
        app:layout_constraintTop_toTopOf="@+id/text_view_genre"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"/>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/text_view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/release_date"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="@+id/text_view_name"
        app:layout_constraintTop_toBottomOf="@+id/text_view_genre" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/date_hint"
        android:layout_marginStart="16dp"
        app:hintEnabled="true"
        app:hintTextColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_date"
        app:layout_constraintTop_toTopOf="@+id/text_view_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/concept_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>